--- a/caffeApp/Designer/Styles/AppStyles.axaml
+++ b/caffeApp/Designer/Styles/AppStyles.axaml
@@ -103,5 +103,48 @@
 		<Setter Property="Foreground" Value="#000000"/>
 	</Style>
 
+
+	<Style Selector="DatePicker.N">
+		<Setter Property="FontSize" Value="14"/>
+		<Setter Property="Padding" Value="8"/>
+		<Setter Property="Margin" Value="0,0,0,8"/>
+		<Setter Property="BorderBrush" Value="#BDBDBD"/>
+		<Setter Property="BorderThickness" Value="1"/>
+		<Setter Property="CornerRadius" Value="5"/>
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+	</Style>
+
+	<Style Selector="TimePicker.N">
+		<Setter Property="FontSize" Value="14"/>
+		<Setter Property="Padding" Value="8"/>
+		<Setter Property="Margin" Value="0,0,0,8"/>
+		<Setter Property="BorderBrush" Value="#BDBDBD"/>
+		<Setter Property="BorderThickness" Value="1"/>
+		<Setter Property="CornerRadius" Value="5"/>
+		<Setter Property="Background" Value="#FFFFFF"/>
+		<Setter Property="Foreground" Value="#000000"/>
+	</Style>
+
+	<Style Selector="RadioButton.N">
+		<Setter Property="Foreground" Value="#333333" />
+		<Setter Property="FontFamily" Value="Segoe UI" />
+		<Setter Property="FontSize" Value="14" />
+		<Setter Property="Padding" Value="5" />
+		<Setter Property="HorizontalAlignment" Value="Left" />
+		<Setter Property="VerticalAlignment" Value="Center" />
+		<Setter Property="Template">
+			<ControlTemplate>
+				<Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        CornerRadius="3"
+                        Padding="{TemplateBinding Padding}">
+					<ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+				</Border>
+			</ControlTemplate>
+		</Setter>
+	</Style>
+
 	<!-- Add Styles Here -->
 </Styles>
