--- a/caffeApp/Views/Admin/ShiftView.axaml
+++ b/caffeApp/Views/Admin/ShiftView.axaml
@@ -46,25 +46,35 @@
 			<ListBox 
 				Classes="N"
 				Margin="30"
-				HorizontalAlignment="Center"
 				ItemsSource="{Binding UsersInWorkShift}">
 				<ListBox.ItemTemplate>
 					<DataTemplate>
 						<Border BorderBrush="Blue" BorderThickness="1"
 								CornerRadius="4" Padding="4">
 							<StackPanel>
-								<TextBlock Text="{Binding UserId}"/>
-								<TextBlock Text="|"></TextBlock>
-								<TextBlock Text="{Binding Fullname}"/>
-								<TextBlock Text="|"></TextBlock>
-								<TextBlock Text="{Binding Rolename}"/>
+								<StackPanel Orientation="Horizontal">
+									<TextBlock>Идентификатор:</TextBlock>
+									<TextBlock Text=" "></TextBlock>
+									<TextBlock Text="{Binding WorkShift.UserId}"/>
+								</StackPanel>
+								
+								<TextBlock Text="{Binding WorkShift.Fullname}"/>
+								<TextBlock Text="{Binding WorkShift.Rolename}"/>
+								
+								<StackPanel Orientation="Horizontal">
+									<TextBlock IsVisible="{Binding}">Номер обслуживаемого столика:</TextBlock>
+									<TextBlock Text=" "></TextBlock>
+									<TextBlock Text="{Binding Place.Number}"/>
+								</StackPanel>
+
+
 							</StackPanel>
 						</Border>
 					</DataTemplate>
 				</ListBox.ItemTemplate>
 			</ListBox>
 
-			<Button
+		<Button
 			Classes="N"
 			Command="{Binding UnselectWorkshift}"
 			Margin="0 10">
@@ -72,7 +82,6 @@
 			</Button>
 		</StackPanel>
 
-		
 		<StackPanel 
 			IsVisible="{Binding !IsClickOnWorkShift}"
 			Margin="10"
